minor updates to data_cleaning jupyter notebook

--- a/src/data_cleaning.ipynb
+++ b/src/data_cleaning.ipynb
@@ -1068,20 +1068,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 199,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'77004'"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "\n",
@@ -1102,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -1172,26 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[], [], []]\n"
-     ]
-    }
-   ],
-   "source": [
-    "foo = [[] * 2] * 3\n",
-    "\n",
-    "print(foo)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -1201,6 +1171,7 @@
       "/hudapi/public/usps?type=1&query=77004\n",
       "Number of tracts: 20\n",
       "/hudapi/public/usps?type=1&query=77005\n",
+      "JSONDecodeError 1\n",
       "Number of tracts: 13\n",
       "/hudapi/public/usps?type=1&query=77006\n",
       "Number of tracts: 17\n",
@@ -1288,12 +1259,14 @@
       "/hudapi/public/usps?type=1&query=77046\n",
       "Number of tracts: 3\n",
       "/hudapi/public/usps?type=1&query=77047\n",
+      "JSONDecodeError 1\n",
       "Number of tracts: 9\n",
       "/hudapi/public/usps?type=1&query=77048\n",
       "Number of tracts: 6\n",
       "/hudapi/public/usps?type=1&query=77049\n",
       "Number of tracts: 14\n",
       "/hudapi/public/usps?type=1&query=77050\n",
+      "JSONDecodeError 1\n",
       "Number of tracts: 4\n",
       "/hudapi/public/usps?type=1&query=77051\n",
       "Number of tracts: 11\n",
@@ -1563,6 +1536,7 @@
       "/hudapi/public/usps?type=1&query=77396\n",
       "Number of tracts: 17\n",
       "/hudapi/public/usps?type=1&query=77401\n",
+      "JSONDecodeError 1\n",
       "Number of tracts: 7\n",
       "/hudapi/public/usps?type=1&query=77477\n",
       "Number of tracts: 15\n",
@@ -1776,6 +1750,7 @@
     "    out_columns = [] * len(zip_series)\n",
     "    \n",
     "    for count, zip in enumerate(zip_series):\n",
+    "        print(count)\n",
     "        zip_json = get_zip_json(CONN, zip)\n",
     "        out = make_zip_row(zip_json, geoid_df, columns_to_extract)\n",
     "        out_columns.append(out)\n",
@@ -1796,9 +1771,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Zipcode  Viral Load  Positivity Rate  Unvaccinated Rate   DP05_0001E  \\\n",
+      "14  77004.0        75.0              3.0               40.0  3682.802079   \n",
+      "15  77005.0        45.0             29.0               13.0  3292.545281   \n",
+      "16  77006.0        50.0             24.0               15.0  3517.706791   \n",
+      "17  77007.0       102.0              6.0                9.0   2799.35567   \n",
+      "18  77008.0       145.0             32.0               20.0  3286.646648   \n",
+      "..      ...         ...              ...                ...          ...   \n",
+      "9       NaN         NaN              NaN                NaN  4119.949603   \n",
+      "10      NaN         NaN              NaN                NaN  5536.994089   \n",
+      "11      NaN         NaN              NaN                NaN  4342.267117   \n",
+      "12      NaN         NaN              NaN                NaN  3762.683348   \n",
+      "13      NaN         NaN              NaN                NaN  3758.990269   \n",
+      "\n",
+      "   S1701_C01_001E  \n",
+      "14     3669.86151  \n",
+      "15    3278.787072  \n",
+      "16    3504.450057  \n",
+      "17    2763.361507  \n",
+      "18    3265.508672  \n",
+      "..            ...  \n",
+      "9     3984.732743  \n",
+      "10    5499.423644  \n",
+      "11    4337.110882  \n",
+      "12     3727.83259  \n",
+      "13    3751.843093  \n",
+      "\n",
+      "[113 rows x 6 columns]\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1894,18 +1902,41 @@
        "18    3265.508672  "
       ]
      },
-     "execution_count": 197,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(zip_complete)\n",
     "zip_complete.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(113, 6)\n",
+      "(99, 4)\n",
+      "99\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(zip_complete.shape)\n",
+    "print(ww_data.shape)\n",
+    "\n",
+    "print(len(ww_data[\"Zipcode\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
