--- a/src/data_cleaning.ipynb
+++ b/src/data_cleaning.ipynb
@@ -2260,7 +2260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -2379,7 +2379,7 @@
        "4                 15  2564.726908     2517.532173      112.284504  "
       ]
      },
-     "execution_count": 257,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2393,7 +2393,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 288,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kaytc\\AppData\\Local\\Temp\\ipykernel_13712\\579362831.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  zip_out[col] = zip_out[col].astype(int)\n",
+      "C:\\Users\\kaytc\\AppData\\Local\\Temp\\ipykernel_13712\\579362831.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  zip_out[col] = zip_out[col].astype(int)\n",
+      "C:\\Users\\kaytc\\AppData\\Local\\Temp\\ipykernel_13712\\579362831.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  zip_out[col] = zip_out[col].astype(int)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Zipcode</th>\n",
+       "      <th>Viral Load</th>\n",
+       "      <th>Positivity Rate</th>\n",
+       "      <th>Unvaccinated Rate</th>\n",
+       "      <th>DP05_0001E</th>\n",
+       "      <th>S1701_C01_001E</th>\n",
+       "      <th>S1501_C01_004E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>07/06/2020-07/13/2023</td>\n",
+       "      <td>77002</td>\n",
+       "      <td>136</td>\n",
+       "      <td>16</td>\n",
+       "      <td>13</td>\n",
+       "      <td>3879</td>\n",
+       "      <td>3397</td>\n",
+       "      <td>202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>07/06/2020-07/13/2024</td>\n",
+       "      <td>77003</td>\n",
+       "      <td>112</td>\n",
+       "      <td>6</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2727</td>\n",
+       "      <td>2711</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>07/06/2020-07/13/2025</td>\n",
+       "      <td>77004</td>\n",
+       "      <td>75</td>\n",
+       "      <td>3</td>\n",
+       "      <td>40</td>\n",
+       "      <td>2704</td>\n",
+       "      <td>2400</td>\n",
+       "      <td>281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>07/06/2020-07/13/2026</td>\n",
+       "      <td>77005</td>\n",
+       "      <td>45</td>\n",
+       "      <td>29</td>\n",
+       "      <td>13</td>\n",
+       "      <td>4271</td>\n",
+       "      <td>4237</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>07/06/2020-07/13/2027</td>\n",
+       "      <td>77006</td>\n",
+       "      <td>50</td>\n",
+       "      <td>24</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2564</td>\n",
+       "      <td>2517</td>\n",
+       "      <td>112</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Date  Zipcode  Viral Load  Positivity Rate  \\\n",
+       "0  07/06/2020-07/13/2023    77002         136               16   \n",
+       "1  07/06/2020-07/13/2024    77003         112                6   \n",
+       "2  07/06/2020-07/13/2025    77004          75                3   \n",
+       "3  07/06/2020-07/13/2026    77005          45               29   \n",
+       "4  07/06/2020-07/13/2027    77006          50               24   \n",
+       "\n",
+       "   Unvaccinated Rate  DP05_0001E  S1701_C01_001E  S1501_C01_004E  \n",
+       "0                 13        3879            3397             202  \n",
+       "1                 18        2727            2711              61  \n",
+       "2                 40        2704            2400             281  \n",
+       "3                 13        4271            4237              60  \n",
+       "4                 15        2564            2517             112  "
+      ]
+     },
+     "execution_count": 288,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cols_to_intify = cols_to_retain[5:]\n",
+    "for col in cols_to_intify:\n",
+    "    zip_out[col] = zip_out[col].astype(int)\n",
+    "zip_out.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
