more comments added

--- a/src/data_cleaning.ipynb
+++ b/src/data_cleaning.ipynb
@@ -1565,333 +1565,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "JSONDecodeError 1\n",
-      "JSONDecodeError 1\n",
-      "JSONDecodeError 1\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157671800\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "JSONDecodeError 1\n",
-      "JSONDecodeError 2\n",
-      "JSONDecodeError 1\n",
-      "JSONDecodeError 1\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157670101\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157670202\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157670102\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157670201\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157670300\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157670700\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157670602\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "JSONDecodeError 1\n",
-      "JSONDecodeError 1\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157673007\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157672500\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157672604\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157672602\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157672701\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157672603\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157672401\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157672402\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157672703\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157672904\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157670300\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157670202\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157670400\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "JSONDecodeError 1\n",
-      "JSONDecodeError 2\n",
-      "JSONDecodeError 1\n",
-      "JSONDecodeError 2\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157672004\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157671900\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48339692402\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48339692303\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "JSONDecodeError 1\n",
-      "IndexError? has occured\n",
-      "GEOID: 48339692604\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48339692304\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48339692401\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48339692502\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48339692301\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48339692303\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48339692302\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48339692605\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48339692402\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48339692603\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48339692202\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157671800\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157672002\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157671402\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157671900\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157671300\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157671102\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157671700\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157671200\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157671401\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157672003\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157670500\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157670400\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157670500\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157670603\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157670604\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157671200\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157670300\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157671101\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157671002\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157670602\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157670700\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157670202\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157671102\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157671800\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "IndexError? has occured\n",
-      "GEOID: 48157671300\n",
-      "Empty DataFrame\n",
-      "Columns: [DP05_0001E, S1701_C02_001E, S1501_C01_005E, S1501_C01_012E]\n",
-      "Index: []\n",
-      "JSONDecodeError 1\n"
+      "Couldnt find GEOID 48157671800\n",
+      "Couldnt find GEOID 48157670101\n",
+      "Couldnt find GEOID 48157670202\n",
+      "Couldnt find GEOID 48157670102\n",
+      "Couldnt find GEOID 48157670201\n",
+      "Couldnt find GEOID 48157670300\n",
+      "Couldnt find GEOID 48157670700\n",
+      "Couldnt find GEOID 48157670602\n",
+      "Couldnt find GEOID 48157673007\n",
+      "Couldnt find GEOID 48157672500\n",
+      "Couldnt find GEOID 48157672604\n",
+      "Couldnt find GEOID 48157672602\n",
+      "Couldnt find GEOID 48157672701\n",
+      "Couldnt find GEOID 48157672603\n",
+      "Couldnt find GEOID 48157672401\n",
+      "Couldnt find GEOID 48157672402\n",
+      "Couldnt find GEOID 48157672703\n",
+      "Couldnt find GEOID 48157672904\n",
+      "Couldnt find GEOID 48157670300\n",
+      "Couldnt find GEOID 48157670202\n",
+      "Couldnt find GEOID 48157670400\n",
+      "Couldnt find GEOID 48157672004\n",
+      "Couldnt find GEOID 48157671900\n",
+      "Couldnt find GEOID 48339692402\n",
+      "Couldnt find GEOID 48339692303\n",
+      "Couldnt find GEOID 48339692604\n",
+      "Couldnt find GEOID 48339692304\n",
+      "Couldnt find GEOID 48339692401\n",
+      "Couldnt find GEOID 48339692502\n",
+      "Couldnt find GEOID 48339692301\n",
+      "Couldnt find GEOID 48339692303\n",
+      "Couldnt find GEOID 48339692302\n",
+      "Couldnt find GEOID 48339692605\n",
+      "Couldnt find GEOID 48339692402\n",
+      "Couldnt find GEOID 48339692603\n",
+      "Couldnt find GEOID 48339692202\n",
+      "Couldnt find GEOID 48157671800\n",
+      "Couldnt find GEOID 48157672002\n",
+      "Couldnt find GEOID 48157671402\n",
+      "Couldnt find GEOID 48157671900\n",
+      "Couldnt find GEOID 48157671300\n",
+      "Couldnt find GEOID 48157671102\n",
+      "Couldnt find GEOID 48157671700\n",
+      "Couldnt find GEOID 48157671200\n",
+      "Couldnt find GEOID 48157671401\n",
+      "Couldnt find GEOID 48157672003\n",
+      "Couldnt find GEOID 48157670500\n",
+      "Couldnt find GEOID 48157670400\n",
+      "Couldnt find GEOID 48157670500\n",
+      "Couldnt find GEOID 48157670603\n",
+      "Couldnt find GEOID 48157670604\n",
+      "Couldnt find GEOID 48157671200\n",
+      "Couldnt find GEOID 48157670300\n",
+      "Couldnt find GEOID 48157671101\n",
+      "Couldnt find GEOID 48157671002\n",
+      "Couldnt find GEOID 48157670602\n",
+      "Couldnt find GEOID 48157670700\n",
+      "Couldnt find GEOID 48157670202\n",
+      "Couldnt find GEOID 48157671102\n",
+      "Couldnt find GEOID 48157671800\n",
+      "Couldnt find GEOID 48157671300\n"
      ]
     }
    ],
@@ -1914,6 +1655,7 @@
     "\n",
     "    return REQUEST_PATHS[index] + str(input_zipcode)\n",
     "\n",
+    "# Performs a http request for a json file \"total_attempts\" number of times before giving up\n",
     "def attempt_json_request(HTTPS_CONN, qs, total_attempts = 1):\n",
     "    attempts = 0\n",
     "    success = False\n",
@@ -1925,7 +1667,7 @@
     "            response_decode = response.read().decode(\"utf-8\")\n",
     "            return json.loads(response_decode)\n",
     "        except (json.decoder.JSONDecodeError):\n",
-    "            print(f\"JSONDecodeError {attempts + 1}\")\n",
+    "            # print(f\"JSONDecodeError {attempts + 1}\")\n",
     "            attempts += 1\n",
     "    return None\n",
     "\n",
@@ -1935,7 +1677,6 @@
     "\n",
     "    # Making the request and extracting the json\n",
     "    qs = get_query_string(zip, type=\"ztot\")\n",
-    "    # print(qs)\n",
     "    j_resp = attempt_json_request(HTTPS_CONN, qs, 5)\n",
     "    return j_resp[\"data\"][\"results\"]\n",
     "\n",
@@ -1952,9 +1693,9 @@
     "            geoid_row = geoid_row.values[0].astype(float)\n",
     "            buffer = np.add(buffer, np.multiply(RES_RATIO, geoid_row))\n",
     "        except (IndexError):\n",
-    "            print(\"IndexError? has occured\")\n",
-    "            print(f\"GEOID: {GEO_ID}\")\n",
-    "            print(geoid_row)\n",
+    "            # print(\"IndexError? has occured\")\n",
+    "            print(f\"Couldnt find GEOID {GEO_ID}\")\n",
+    "            # print(geoid_row)\n",
     "    return buffer\n",
     "\n",
     "# extract the specified columns in columns_to_extract from a given dataframe with a GEOID column\n",
