--- a/src/ugsfinal.ipynb
+++ b/src/ugsfinal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "a35ccd44-90b4-4621-8a62-7e249ccee365",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,14 @@
     "from sklearn.linear_model import LinearRegression\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import altair as alt"
+    "import altair as alt\n",
+    "\n",
+    "# Courtesy of Alec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "046149dc-30bb-4aa0-8e25-75a9eda34065",
    "metadata": {},
    "outputs": [],
